Stream API (Java 8+ future)/basic example of forEach