@@ -1,12 +1,9 @@
-import java.util.Arrays;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        List<String> names = Arrays.asList("Ali", "Ayşe", "Mehmet");
+        List<String> list = List.of("Elma", "Armut", "Kiraz");
 
-        names.stream()
-                .filter(name -> name.startsWith("A"))
-                .forEach(name -> System.out.println("A ile başlayan: " + name));
+        list.stream().forEach(item -> System.out.println("Meyve: " + item));
     }
 }
